implement: RaspberyPIの話以外は「過去のもの」として移動。

--- a/scripts/for_macine_parsonal/matsuichi/mentenance/20200508.md
+++ b/scripts/for_macine_parsonal/matsuichi/mentenance/20200508.md
@@ -55,6 +55,7 @@ systemctl list-timers
 0. /etc/dhcp/dhcpd6.conf をノリで修正
 0. systemctl enable isc-dhcp-server && systemctl restart isc-dhcp-server
 0. /etc/dhcpcd.conf に「DNSサーバの仕込みをしていなかった」ので修正。
+0. 
 0. reboot
 
 ## 削除できそうだから削除してみたもの
@@ -70,6 +71,11 @@ systemctl list-timers
 - dosfstools
 - nfs-common
 - ntfs-3g
+- python2
+  
+### 容量がデカイファイルを見繕って削除
+
+
 
 ## 参考
 - https://www.hiroom2.com/2017/06/27/debian-9-dhcp%E3%82%B5%E3%83%BC%E3%83%90%E3%82%92%E3%82%A4%E3%83%B3%E3%82%B9%E3%83%88%E3%83%BC%E3%83%AB%E3%81%99%E3%82%8B/
